# prism

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  requirements.txt  setup.py
scripts/: add_license_header.py
src/prism/core/: __init__.py
